# LASER

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  LICENSE  README.md  app.py  install_external_tools.sh  install_models.sh  pyproject.toml  remove_external_tools.sh  requirements.txt  t.py
.github/workflows/: lint_and_tests.yml
data/nllb200/: LICENSE  README.md
data/wmt22_african/: LICENSE  README.md
docker/: Dockerfile  README.md  app.py  decode.py  encode.py  environment.yml  requirements.txt
flores/flores200_dataset/: README  metadata_dev.tsv  metadata_devtest.tsv
laser-py/: laser.py
laser_encoders/: README.md  __init__.py  __main__.py  download_models.py  language_list.py  laser_tokenizer.py  models.py  pyproject.toml  requirements.txt  test_laser_tokenizer.py  test_models_initialization.py  validate_models.py
laser_encoders/tests/: test_laser_tokenizer.py
mlenc/: mlenc.py  mlenc_binarize.py  mlenc_blstm.py  mlenc_const.py
nllb/: README.md  download_models.sh
source/: embed.py  eval.py  mine_bitexts.py  nli.py  paraphrase.py  pxsim.py  sent_classif.py  similarity_search.py  xsim.py
source/lib/: .text_processing.py.swp  indexing.py  python_mecab.py  romanize_lc.py  text_processing.py
tasks/CCMatrix/: README.md  dl_cc_matrix.py  fix_files.py  requirements.txt
tasks/SentimentAnalysis/: README.md  SentimentAnalysis.ipynb
tasks/WikiMatrix/: README.md  extract.py  list_of_bitexts.txt
tasks/bucc/: README.md  bucc.py  bucc.sh  bucc_embed.sh  bucc_mine.sh
tasks/clustering/: LaserClusteringExample.ipynb  (+1 more)
tools/: classify_sent.py
utils/: requirements.txt  setup.py
(+675 files in other folders)
